# viwc

./: .gitignore  CMakeLists.txt  HELLO.C  HELLO2.C  SIZE.TXT  VIC_LOG_1.TXT  _test.txt  btm_loop.c  btm_loop.h  draw_ui.c  draw_ui.h  file_sl.c  file_sl.h  file_str.c  file_str.h  gen_file.c  highlit.c  highlit.h  ins_loop.c  ins_loop.h  intclock.c  intclock.h  intmouse.c  intmouse.h  log_md.c  log_md.h  m_loop.c  m_loop.h  main.c  main.h  makefile  makefile-t  makefile~  mouse_d.c  n_loop.c  n_loop.h  readme.md  t.c  term_set.c  term_set.h  (+5 more)
res/: console_design.txt  dos_ascii_map.txt  win_getch_ascii.txt
